[package]
name = "parsit"
description = "very simple lib, the parsing combinators, recursive descendent that uses logos as lexer"
version = "0.1.12"
edition = "2021"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
license-file = "LICENSE"
homepage = "https://github.com/besok/parseit"
repository = "https://github.com/besok/parseit"
readme = "README.md"
keywords = ["logos", "parser", "parser-combinators", "language","lexer"]
categories = [ "parsing","compilers","development-tools","parser-implementations"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
logos-derive = "0.13.0"